[package]
name = "va"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = "1.12.1"
chrono = "0.4.22"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
png = "0.17.6"
rand = "0.8.5"
roots = "0.0.7"
thiserror = "1.0.35"
ttf-parser = "0.15.2"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-win = "0.30.0"
winit = "0.26.1"